2009-08-07  Alejandro G. Castro  <alex@igalia.com>

	Added a new debug enviroment option to enable the synchronous X
	error handling.

	* engine/sapwood-main.c,
	(theme_init): Captured the new "xtraps" option in a new boolean
	variable.
	* engine/sapwood-pixmap.h:
	* engine/sapwood-pixmap.c,
	(sapwood_pixmap_get_for_file):
	* engine/theme-pixbuf.c,
	(theme_pixbuf_render): Added conditions to avoid gdk_flush if the
	xtraps debug option is not actived.

	Fixes: NB#131431 (gdk_flush in sapwood is causing tearing)

2009-08-06  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/large-window.gtkrc: Relicense to make it
	compatible with GNU GPL.

	Fixes: NB#131258 (Legal bug)

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Added the graphics from Daniel Borgmann

	* demos/rgba-demo.c (main): some cleanup
	* demos/rgba-demo.gtkrc: use the new graphics
	* demos/images/alpha_button.png,
	* demos/images/alpha_entry.png,
	* demos/images/background_tile.png: new graphics from Daniel

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Added fatal warnings

	* tests/double-free.c (main): enable fatal warnings when arguments are
	passed

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Support three depths, system, 24 and 32...

	* server/sapwood-server.c (extract_pixmap_single),
	(pixbuf_open_response_new), (main): support three depths; enable fatal
	warnings when arguments are passed

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Don't echo the screen name; this reduces the noise from running the
	test cases

	* tests/sapwood-wrapper: drop this

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Drop the temporary window.

	* server/sapwood-server.c (extract_pixmap_single): drop the window,
	set the colormap directly (instead of through the other drawable)

2009-01-16  Sven Herzberg  <sven@imendio.com>

	Added proper and distinguishable logging domains

	* engine/Makefile.am,
	* server/Makefile.am: set the logging domains to "sapwood-server" and
	"sapwood-engine"
